// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<Nav /> renders default 1`] = `
<DocumentFragment>
  .c0 {
  width: 100%;
  padding: 0.7rem 0;
  position: fixed;
  top: 4.8rem;
  left: 0;
  z-index: 200;
  background: #fff;
  box-shadow: 0 3px 6px 0 rgba(104,104,104,0.5);
  opacity: 0;
  transition: opacity 0.2s linear;
}

@media screen and (min-width:40rem) {
  .c0 {
    width: 50%;
    top: 1rem;
    left: 47%;
    box-shadow: none;
    opacity: 1;
  }
}

<nav
    class="c0"
  />
</DocumentFragment>
`;

exports[`<Nav /> renders with theme 1`] = `
<DocumentFragment>
  .c0 {
  width: 100%;
  padding: 0.7rem 0;
  position: fixed;
  top: 4.8rem;
  left: 0;
  z-index: 200;
  background: #202124;
  box-shadow: 0 3px 6px 0 rgba(104,104,104,0.5);
  opacity: 0;
  transition: opacity 0.2s linear;
}

@media screen and (min-width:40rem) {
  .c0 {
    width: 50%;
    top: 1rem;
    left: 47%;
    box-shadow: none;
    opacity: 1;
  }
}

<nav
    class="c0"
  />
</DocumentFragment>
`;
